vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/enum-non-scalar.stderr
error: `H5Type` can only be derived for enums with scalar discriminants
 --> tests/compile-fail/enum-non-scalar.rs:6:6
  |
6 | enum Foo {
  |      ^^^
